--- a/hugg.css
+++ b/hugg.css
@@ -1,5 +1,5 @@
 body {
-background-image : url('https://cdn.jsdelivr.net/gh/huggcloud/www@2/background.png')
+background-image : url('https://cdn.jsdelivr.net/gh/huggcloud/www@3/background.png')
 ; background-size : cover
 ; background-position : center
 ; background-attachment : fixed
@@ -8,7 +8,14 @@ background-image : url('https://cdn.jsdelivr.net/gh/huggcloud/www@2/background.p
 ; font-family : 'Tajawal' , sans-serif
 ; font-size : 14px
 ; font-weight : 400
-; color : rgba(255, 255, 255, 0.984375)
+
+; color : rgba(
+255
+, 255
+, 255
+
+, 0.984375
+)
 }
 
 
@@ -22,6 +29,7 @@ h3 {font-size : 28px}
 
 h1 , h2 , h3 {
 font-weight : 300
+; margin : 0
 ; display : inline
 }
 
@@ -30,8 +38,21 @@ a {text-decoration-style : dotted}
 ion-icon {display : inline-block}
 
 ::selection {
-color : rgba(255 , 255 , 255 , 1)
-; background : rgba(255 , 255 , 255 , 0.15625)
+color : rgba(
+255
+, 255
+, 255
+
+, 1
+)
+
+; background : rgba(
+255
+, 255
+, 255
+
+, 0.15625
+)
 }
 
 
