--- a/hugg.css
+++ b/hugg.css
@@ -1,5 +1,5 @@
 body {
-background-image : url('https://cdn.jsdelivr.net/gh/huggcloud/www@5/background.png')
+background-image : url('https://cdn.jsdelivr.net/gh/huggcloud/www@6/background.png')
 ; background-size : cover
 ; background-position : center
 ; background-attachment : fixed
@@ -18,7 +18,6 @@ background-image : url('https://cdn.jsdelivr.net/gh/huggcloud/www@5/background.p
 )
 }
 
-
 h1 {
 font-family : 'Montserrat' , sans-serif
 ; font-size : 56px
@@ -33,8 +32,11 @@ font-weight : 300
 ; display : inline
 }
 
+a {
+color : inherit
+; -webkit-text-decoration-style : dotted; text-decoration-style : dotted
+}
 
-a {-webkit-text-decoration-style : dotted;text-decoration-style : dotted}
 ion-icon {display : inline-block}
 
 ::-moz-selection {
@@ -51,7 +53,7 @@ color : rgba(
 , 255
 , 255
 
-, 0.15625
+, 0.1875
 )
 }
 
@@ -69,7 +71,7 @@ color : rgba(
 , 255
 , 255
 
-, 0.15625
+, 0.1875
 )
 }
 
